# a-back

./: Cargo.toml  README.md  package.json  run.sh
migrations/: 20251104101640_create_avito_car_marks.down.sql  20251104101640_create_avito_car_marks.up.sql  20251105101640_create_avito_ads_tables.down.sql  20251105101640_create_avito_ads_tables.up.sql  20251105110330_create_avito_accounts_table.down.sql  20251105110330_create_avito_accounts_table.up.sql
src/: config.rs  main.rs
src/api/: mod.rs
src/api/avito_client/: avito_client.rs
src/api/avito_requests/: avito_requests.rs  mod.rs
src/api/firms/: mod.rs
src/api/pages/: pages.rs
src/api/shared/: shared.rs
src/controllers/: config.rs  mod.rs
src/controllers/ai_description_processing/: ai_description_processing.rs  mod.rs
src/controllers/ai_title_processing/: ai_title_processing.rs  mod.rs
src/controllers/auth/: login.rs  logout.rs  mod.rs  role.rs
src/controllers/avito_accounts/: avito_accounts.rs  mod.rs
src/controllers/avito_ads/: avito_ads.rs  avito_create_ad.rs  avito_delete_ad.rs  avito_update_ad.rs  mod.rs
src/controllers/avito_client/: avito_client.rs  mod.rs
src/controllers/avito_editor/: avito_editor.rs  mod.rs
src/controllers/avito_feeds/: get_avito_feed_ad.rs  get_avito_feed_by_id.rs  get_avito_feeds.rs  (+2 more)
src/models/: avito_accounts.rs  avito_client.rs  avito_feed.rs  avito_reports.rs  avito_requests.rs  firms.rs  mod.rs  pages.rs  types.rs  users.rs
src/services/: mod.rs  rabbitmq_service.rs
src/utils/: encryption.rs  filter_firm_record.rs  filter_user_record.rs  mod.rs
(+36 files in other folders)
